# sintages

./: main.py  pyproject.toml
src/api/auth/: routes.py  services.py
src/api/categories/: schemas.py
src/api/ingredients/: schemas.py
src/api/recipes/: routes.py  schemas.py  services.py
src/api/users/: routes.py
src/core/: dependencies.py  enums.py
tests/: conftest.py
tests/routers/: test_categories.py  test_health.py  test_ingredients.py  test_recipes.py  test_users.py
